<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.spicytomato.javadatastrcutrueexperiment_2.MyViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WelcomeFragment">

        <TextView
            android:id="@+id/textView_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_welcome"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.196" />

        <Button
            android:id="@+id/button_queue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_queue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_Stack"
            app:layout_constraintTop_toBottomOf="@+id/textView_welcome"
            app:layout_constraintVertical_bias="0.614" />

        <Button
            android:id="@+id/button_Stack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_stack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_queue"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_welcome"
            app:layout_constraintVertical_bias="0.614" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>