<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.spicytomato.javadatastrcutrueexperiment_2.MyViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainFragment">

        <Button
            android:id="@+id/button_pop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/button_pop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_push"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.661" />

        <Button
            android:id="@+id/button_push"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_push"
            app:layout_constraintBottom_toBottomOf="@+id/button_pop"
            app:layout_constraintEnd_toStartOf="@+id/button_pop"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_clear"
            app:layout_constraintTop_toTopOf="@+id/button_pop"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_clear"
            app:layout_constraintBottom_toBottomOf="@+id/button_push"
            app:layout_constraintEnd_toStartOf="@+id/button_push"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_init"
            app:layout_constraintTop_toTopOf="@+id/button_push"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_init"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_init"
            app:layout_constraintBottom_toBottomOf="@+id/button_clear"
            app:layout_constraintEnd_toStartOf="@+id/button_clear"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_clear"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_print"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_print"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_push" />

        <TextView
            android:id="@+id/textView_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button_push"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.372"
            tools:text="提示" />

        <TextView
            android:id="@+id/textView_print"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/button_clear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_hint"
            app:layout_constraintVertical_bias="0.251"
            tools:text="输出" />

        <TextView
            android:id="@+id/textView_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/button_clear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_print"
            tools:text="结果" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>